@@ -1,3 +1,8 @@
+2009-10-12  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* libexec/project7.pl:
+	For Xport directive differentiate q (Set via &) and Q (Set via const&).
+
 2009-10-11  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* libexec/project7.pl:
